<resources>
    <string name="app_name">Fitasty</string>

    <!--  login_layout strings  -->
    <string name="username_text">Username:</string>
    <string name="password_text">Password:</string>
    <string name="login_text">LOGIN</string>
    <string name="create_new_account_text">Create New Account</string>

    <!--  main_menu_layout strings  -->
    <string name="new_ingredient_text">Add New Ingredient</string>
    <string name="new_ingredient_new_line_text">Add New\nIngredient</string>
    <string name="new_dish_text">Add New Dish</string>
    <string name="my_diet_diaries_text">My Diet Diaries</string>
    <string name="settings_text">Settings</string>
    <string name="log_out_text">LOG OUT</string>
    <string name="hello_text">Hello !</string>

    <!--  account_layout strings  -->
    <string name="cancel">Cancel</string>
    <string name="check">Check</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age:</string>
    <string name="height">Height:</string>
    <string name="cm">cm</string>
    <string name="weight">Weight:</string>
    <string name="kg">kg</string>
    <string name="country_text">Country:</string>
    <string name="activity_text">How active are you?</string>
    <string name="goal_text">What is your weight goal?</string>
    <string name="diet_type_text">What is your preferred diet type?</string>
    <string name="sensitivities_text">Do you have any sensitivities?</string>

    <!--  add_dish_layout strings  -->
    <string name="dish_name">Dish name:</string>
    <string name="dish_content">Content:</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>

    <!--  add_ingredient_layout strings  -->
    <string name="add">Add</string>
    <string name="ingredient_name">Ingredient name:</string>
    <string name="state_of_matter">State of matter:</string>
    <string name="solid">Solid</string>
    <string name="liquid">Liquid</string>
    <string name="serving_size">Serving size:</string>
    <string name="fat_colon">Fat:</string>
    <string name="carb_colon">Carb:</string>
    <string name="fiber_colon">Fiber:</string>
    <string name="protein_colon">Protein:</string>
    <string name="gram">g</string>
    <string name="sensitivities">Sensitivities:</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="gluten_free">Gluten-Free</string>
    <string name="lactose_free">Lactose-Free</string>

    <!--  search_items_layout strings  -->
    <string name="search_items">Search Items</string>
    <string name="search_for">Search for:</string>
    <string name="nutrition_facts_filter">Nutrition Facts Filter</string>
    <string name="ingredients">Ingredients</string>
    <string name="dishes">Dishes</string>
    <string name="type_to_search">Type to search…</string>
    <string name="amount_max_explanation">The value written in the amount field in the search table is your recommended max amount for that item.</string>

    <!--  settings_layout strings  -->
    <string name="edit_account">Edit Account</string>
    <string name="delete_account">Delete Account</string>

    <!--  ingredient_info_dialog strings  -->
    <string name="ingredient_information">Ingredient Information</string>
    <string name="name_colon">Name:</string>

    <!--  dish_info_dialog strings  -->
    <string name="dish_information">Dish Information</string>
    <string name="total_nutrition_facts">Total nutrition facts:</string>
    <string name="ingredients_colon">Ingredients:</string>

    <!--  diet_diary_layout strings  -->
    <string name="diet_diary_name">Diet diary name:</string>
    <string name="meals">Meals:</string>
    <string name="calorie_information_summary">Calorie information summary:</string>
    <string name="recommended_for_you">Recommended For You\n(for a full day)</string>
    <string name="from_selected_meals">From\nSelected\nMeals</string>
    <string name="difference">Difference</string>
    <string name="calories_colon">Calories:</string>
    <string name="calories">Calories</string>
    <string name="fat">Fat</string>
    <string name="carb">Carb</string>
    <string name="fiber">Fiber</string>
    <string name="protein">Protein</string>

    <!--  meal_layout strings  -->
    <string name="meal_calorie_information">Meal calorie information:</string>
    <string name="recommended_max_for_this_meal">Recommended Max Values\n(for this meal)</string>
    <string name="in_this_meal">In This\nMeal</string>

    <!--  nutrition_facts_filter_dialog strings  -->
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="fact_fields_explanation">The items search is according to these facts values.</string>
    <string name="filter_is_per_serving">For ingredients, the filter is per serving size.</string>
    <string name="amount_fields_explanation">The min-max amount fields set the amount percent range for the items search.</string>
    <string name="leave_empty_for_no_filter">Leave a field value empty for no filter on that field.</string>
    <string name="reset_to_recommended">Reset to recommended values</string>
    <string name="min_amount">Min Amount:</string>
    <string name="max_amount">Max Amount:</string>
    <string name="percent">%</string>

    <!--  my_diet_diaries_layout strings  -->


</resources>