<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:focusableInTouchMode="false">

    <CheckBox
        android:id="@+id/dishesCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:buttonTint="@color/darkBlue"
        android:checked="true"
        android:text="@string/dishes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ingredientsCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/searchItemsTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/searchItemsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/search_items"
        android:textColor="@color/darkBlue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/searchItemsCancelIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/btn_dialog" />

    <EditText
        android:id="@+id/searchItemInput"
        android:layout_width="248dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/type_to_search"
        android:inputType="textPersonName"
        android:maxLength="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsCheckBox"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/veganCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:buttonTint="@color/darkBlue"
        android:text="@string/vegan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchItemInput"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/lactoseFreeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="5dp"
        android:buttonTint="@color/darkBlue"
        android:text="@string/lactose_free"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veganCheckBox"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/glutenFreeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="198dp"
        android:buttonTint="@color/darkBlue"
        android:text="@string/gluten_free"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veganCheckBox"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/vegetarianCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="20dp"
        android:buttonTint="@color/darkBlue"
        android:text="@string/vegetarian"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchItemInput"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="50dp"
        android:background="@color/veryLightBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchItemInput"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

    <ScrollView
        android:id="@+id/searchedItemsTableScrollView"
        android:layout_width="390dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:nestedScrollingEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchItemsInfoText"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NestedScrolling">

        <TableLayout
            android:id="@+id/searchedItemsTable"
            android:layout_width="390dp"
            android:layout_height="300dp"
            android:divider="?android:listDivider"
            android:showDividers="middle" />

    </ScrollView>

    <TextView
        android:id="@+id/seachForText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="25dp"
        android:text="@string/search_for"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchItemsTitle"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/ingredientsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:buttonTint="@color/darkBlue"
        android:checked="true"
        android:text="@string/ingredients"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/seachForText"
        app:layout_constraintTop_toBottomOf="@+id/searchItemsTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/searchItemsInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glutenFreeCheckBox"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>