<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/backgroundColor"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

        <Button
            android:id="@+id/newIngredientButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="170dp"
            android:layout_marginBottom="300dp"
            android:text="@string/new_ingredient_text"
            android:background="@color/buttonColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/newDishButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="170dp"
            android:layout_marginBottom="300dp"
            android:text="@string/new_dish_text"
            android:background="@color/buttonColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/myMenusButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="170dp"
            android:text="@string/my_menus_text"
            android:background="@color/buttonColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="40dp"
            android:text="@string/settings_text"
            android:background="@color/buttonColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:text="@string/log_out_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>